Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
 input, button, textarea {
   outline: none;
 }
-
-body {
-  overflow: hidden
-}
